# botnet

./: .gitignore  Cargo.toml  README.md  config.yaml  config.yaml.example  travis.yaml
.github/workflows/: ci.yaml
assets/: README.md
assets/img/bitsy-ios-icons/: site.txt
assets/img/bitsy-logos/: app-icon.psd  black-fg-transparent-bg.psd  black-fg-white-bg.psd  white-fg-black-bg.psd  white-fg-transparent-bg.psd
bitsy/: .prettierrc.js  App.tsx  Gemfile  package.json
bitsy-ios/: App.tsx  app.json  package.json
bitsy-ios/ios/: Podfile
bitsy-ios/ios/bitsy/: AppDelegate.mm  Info.plist
bitsy-ios/ios/bitsy.xcworkspace/: contents.xcworkspacedata
bitsy-ios/ios/bitsyTests/: bitsyTests.m
bitsy-ios/ios/fastlane/: Matchfile
bitsy-ios/src/: const.tsx  global.tsx  router.tsx  theme.tsx  utils.tsx
bitsy-ios/src/components/: AccessRequestListItem.tsx
bitsy-ios/src/models/: Document.tsx  DocumentBlob.tsx  Permission.tsx  Setting.tsx
bitsy-ios/src/services/: Session.tsx  Web3.tsx
bitsy-ios/src/views/: AccessRequestsView.tsx  AccountView.tsx  DocumentsView.tsx  FeedView.tsx  FocusAccessRequestView.tsx  FocusDocumentView.tsx  LoginView.tsx  SettingsView.tsx  SignupView.tsx
bitsy-py/: .bash_aliases  .dockerignore  .env  .env.example  Pipfile  README.md  config.yaml  main.py  mypy.ini  requirements.txt  travis.yaml
bitsy-py/bitsy/: __init__.py  _config.py  _const.py  _crypto.py  _db.py  _errors.py  _graphql.py  _models.py  _uses.py  _utils.py  _web.py  uses.txt
bitsy-py/config/: bitsy.dev.yaml  bitsy.prod.yaml  bitsy.yaml  ci.yaml  dev.yaml  prod.yaml  vault.hcl
bitsy-py/env/: .env.example
bitsy-py/migrations/: 001_create_migrations_table.py  002_bootstrap_db.py  __init__.py  bootstrap_db.py  main.py
bitsy-py/requirements/: Pipfile  requirements.txt
bitsy-py/sysadmin/: .bash_aliases  .bashrc  uvicorn.dev.bash
bitsy-py/tests/: account.json  conftest.py  curl.txt  graphql_queries.txt  test_config.py  test_crypto.py  test_db.py  test_graphql.py  test_uses.py  test_vault.py  test_web.py  utils.py
bitsy-rs/: .env  Cargo.toml
bitsy-rs/src/: lib.rs
bitsy-www/bitsy/: .prettierrc.js  package.json
bitsy-www/bitsy/public/: index.html
bitsy-www/bitsy/src/: config.tsx  const.tsx  global.ts  utils.tsx
bitsy-www/bitsy/src/components/: Loading.tsx  TopNavigation.tsx
bitsy-www/bitsy/src/etc/: settings.json
bitsy-www/bitsy/src/models/: AccessRequest.tsx  Account.tsx  Document.tsx  DocumentBlob.tsx  ThirdPartyAccount.tsx
bitsy-www/bitsy/src/services/: Axios.tsx  Session.tsx
bitsy-www/bitsy/src/views/: AccessTokens.tsx  Landing.tsx  Logout.tsx  Settings.tsx  Webhooks.tsx
bitsy/ios/: Podfile
bitsy/ios/bitsy/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
bitsy/ios/bitsy.xcodeproj/: project.pbxproj
bitsy/ios/fastlane/: Appfile  Fastfile
bitsy/src/: const.tsx  global.tsx  router.tsx  utils.tsx
bitsy/src/components/: SearchBar.tsx
bitsy/src/models/: AccessRequest.tsx  Account.tsx  DocumentBlob.tsx  FeedItem.tsx
bitsy/src/views/: AccessRequestsView.tsx  AccountView.tsx  BaseView.tsx  DocumentsView.tsx  FeedView.tsx  FocusAccessRequestView.tsx  FocusDocumentView.tsx  LoginView.tsx  PermissionsView.tsx  SettingsView.tsx  SignupView.tsx  SplashView.tsx
docs/: README.md
env/: .env.ci
examples/axum/: Cargo.toml  README.md  config.yaml
examples/axum/src/: main.rs
examples/unix-socket/: Cargo.toml  README.md
examples/unix-socket/src/: main.rs
src/: lib.rs
sysadmin/: .bash_aliases  bitsy.service  uvicorn.prod.bash
sysadmin/docker/: Dockerfile.bitsy-py  Dockerfile.bitsy.py  Dockerfile.bitsy.rs  Dockerfile.bitsy.vault  Dockerfile.bitsy.www  docker-build.bash  docker-cleanup.bash  docker-push.bash  dockercompose.yaml
www/bitsy/: package.json  webpack.config.js
www/bitsy/src/: config.tsx  router.tsx
www/bitsy/src/models/: AccessToken.tsx  Account.tsx  Setting.tsx  ThirdParty.tsx  Webhook.tsx
www/bitsy/src/services/: Axios.js  Web3.tsx
www/bitsy/src/views/: AccessTokens.tsx  Landing.tsx  (+2 more)
(+1 files in other folders)
