[package]
name = "anomaly-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "anomaly_detector"
path = "src/bin/main.rs"

[lib]
name = "anomaly_detector"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nom = "5.1"
url = "2.3"
bytes = "1.3"
