[package]
name = "bitsy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "bitsy"

[[bin]]
path = "src/bin/bitsy.rs"
name = "bitsy"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
thiserror = "1.0"
tokio-postgres = { version = "0.7.5", features = ["with-serde_json-1"] }
serde_json = { version = "1.0", features = ["raw_value"] }
futures = "0.3"
http = "0.2"
r2d2 = "0.8"
r2d2-diesel = "1.0"
anyhow = "1.0.53"
async-std = "1.10.0"
axum = "0.4"
diesel = { version = "1.4", features = ["postgres", "serde_json"] }
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
axum-macros = "0.2"
diesel_codegen = "0.16"