[package]
name = "axum"
description = "Example of using botnet in axum middleware."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.0" }
async-trait = { version = "0.1" }
axum = { version = "0.6" }
bincode = { version = "1.3" }
botnet = { path = "./../../packages/botnet", version = "0.2" }
bytes = { version = "1.3", features = ["serde"] }
futures-util = "0.3"
lazy_static = "1.4"
nom = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["fs", "trace", "cors", "limit"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["ansi", "json", "env-filter"] }
url = { version = "2.3" }